--- a/client/patareal/pubspec.yaml
+++ b/client/patareal/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   universal_io: ^1.0.1
+  flutter_secure_storage: ^3.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
